[package]
name = "scratch_pad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
eframe = { version = "0.19.0", features = ["persistence"] }
egui_extras = "0.19.0"
rand = "0.8.5"
dirs = "4.0.0"
chrono = "0.4.22"
